<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/lessons_timetable"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline6">

        <Button
            android:id="@+id/buttonCorso1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/civileT"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonCorso2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/civileM"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonCorso3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/gestionaleT"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonCorso4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/gestionaleM"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonCorso5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/tlcT"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonCorso6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/tlcM"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4">

        <ImageButton
            android:id="@+id/buttonHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#fafafa"
            app:srcCompat="@mipmap/home_button" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="1dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="642dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="135dp" />

</android.support.constraint.ConstraintLayout>